# librpass

./: .gitignore  CMakeLists.txt  README  README.asciidoc  getpassphrasencurses.c  librpass.c  password_functions.c  password_functions.h  rp  rpass  rpass.1  rpass.example.conf  rpass.h  rpass.py  rpass_py_interface  rpass_sys_config.h.in  rpass_test.py  ru  setup.py
C/: CMakeLists.txt  Makefile  passphrase_dialog.c  passphrase_dialog.h  rGPG.c  rGPG.h  rGPGmodule.c  rpass.c  rpass.h  setup.py
cmake/: rpass.cmake
cmake/Modules/: FindLibrpass.cmake
python_interface/: rpass  rpass.py  rpass_interface.py  setup.py
python_interface/rpass/: rpass_interface.py
rpass_library/: CMakeLists.txt  getpassphrasegtk.c  getpassphrasegtk.h  getpassphrasencurses.h  librpass.c  password_functions.c  password_functions.h  rpass.h  rpass_sys_config.h.in  rpassd.cpp  rpassd_password.cpp  rpassd_password.h  rpassd_signal_handlers.cpp  testrpassd.c
testing/: invalid_gpg_file.gpg  test  test.gpg
